# Synth1

./: .gitignore  CMakeLists.txt  README.md  index.html
resource/: Info.plist  note_expression_synth.uidesc
source/: controller.cpp  eigen.h  eigen_evaluator.h  factory.cpp  fast_trig.h  legendre.h  note_expression_synth_controller.cpp  note_expression_synth_controller.h  note_expression_synth_processor.cpp  note_expression_synth_processor.h  note_expression_synth_ui.cpp  note_expression_synth_ui.h  note_expression_synth_voice.cpp  note_expression_synth_voice.h  parameters.cpp  parameters.h  processor.cpp  processor.h  ui.cpp  ui.h  version.h  voice.cpp  voice.h
webpage/css/: main.css
